fix modal title align; add preventHideOnAccept flag; add import check modal

--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -37,6 +37,7 @@
 .modal__title {
   font-weight: 100;
   margin: 22px 0;
+  text-align: center;
 }
 
 .modal__footer {
